ReportServiceImplTest refactor